# GameBaraban

./: CMakeLists.txt  README.md  game.out  main.cpp
header/: animation.hpp  baraban.hpp  baraban_solo.hpp  button.hpp  commentary.hpp  game.hpp  icon_elements.hpp  interface.hpp  mouse_controller.hpp  resource.hpp  text.hpp
source/: animation.cpp  baraban.cpp  baraban_solo.cpp  button.cpp  commentary.cpp  game.cpp  icon_elements.cpp  interface.cpp  mouse_controller.cpp  resource.cpp  text.cpp
